<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    android:background="#6576D8"
    android:padding="15dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:textColor="#474343"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification_email"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/confirm_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/email"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:background="@drawable/custom_btn2"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:textColor="#474343"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_btn2"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:autofillHints="" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#474343"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/dialogConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="#474343"
            android:text="@string/submit"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp" />
    </RelativeLayout>
</LinearLayout>