<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:padding="5dp"
                    android:text="@string/account_settings"
                    android:textColor="#fff"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textHeader"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_btn2"
                    android:padding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_email"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_btn2"
                    android:padding="10dp"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:autofillHints="" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_password"
                    android:layout_marginTop="35dp"
                    android:textColor="@color/linkBlue"
                    android:background="@drawable/custom_btn2"
                    android:text="@string/save" />

                <TextView
                    android:id="@+id/change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_save"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/change_password"
                    android:textColor="@color/linkBlue"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible" />
</RelativeLayout>