<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9A9A9"
    tools:context=".fragments.MainFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A9A9A9"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".fragments.MainFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/text_img"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/find_stage"
                android:layout_centerVertical="true"
                android:src="@drawable/bus2"
                android:contentDescription="@string/todo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/text_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#A9A9A9"
                card_view:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:background="#A9A9A9"
                    android:layout_margin="15dp"
                    android:id="@+id/main_frag_txt"
                    android:padding="10dp"
                    android:lineSpacingExtra="15dp"
                android:text="@string/reason"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
