<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activities.CommuterActivity">

   <androidx.cardview.widget.CardView
       android:layout_width="wrap_content"
       android:id="@+id/text_card"
       android:layout_height="wrap_content">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:layout_margin="15dp"
           android:textColor="#fff"
           android:id="@+id/commuter_txt"
           android:gravity="start"
           android:textSize="20sp"
           android:text="@string/the_commuter"
           />
   </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@+id/text_card"
        android:layout_margin="20dp"
        android:id="@+id/spinner_card"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinner"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:background="@drawable/custom_btn2"
            android:layout_width="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/input_card"
        android:background="#fff"
        android:layout_below="@+id/spinner_card"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_below="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:id="@+id/commuterInput"
            android:textStyle="italic"
            android:padding="10dp"
            android:inputType="text"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_btn2"
            android:hint="@string/location"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Submit"
    android:background="@drawable/custom_btn2"
    android:layout_below="@+id/input_card"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="60dp"
    />

</RelativeLayout>